# efalive_docker

./: .gitignore  Dockerfile  README.md  build_create_release.sh
.github/workflows/: deploy.yml
create_release/: pyproject.toml
create_release/create_release/: create_release.py
create_release/tests/: test_create_release.py
files/: create_release-0.1.0-py3-none-any.whl  deploy_registry.sh
