[tool.poetry]
name = "create_release"
version = "0.1.0"
description = "Tool that creates releases and changelog based on commits"
authors = ["Kay Hannay <klinux@hannay.de>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
gitpython = "^3.1.30"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
