[tool.poetry]
name = "create_release"
version = "0.1.0"
description = "Tool that creates releases and changelog based on commits"
authors = ["Kay Hannay <klinux@hannay.de>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
gitpython = "^3.1.32"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
